# Aerion-Airsim

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
airsim_ros2_bridge/: package.xml  setup.cfg  setup.py
airsim_ros2_bridge/airsim_ros2_bridge/: bridge_node.py  camera_publisher.py  drone_controller.py  utils.py
docs/: 구축기록.md  다음단계계획.md
docs/superpowers/plans/: 2026-04-07-colosseum-px4-apm-ros2.md
docs/superpowers/specs/: 2026-04-07-colosseum-px4-sitl-ros2-design.md
scripts/: cleanup.sh  demo_apm_flight.py  demo_dual_drone.py  generate_settings.py  launch_apm_dual.sh  launch_px4_dual.sh  launch_ue.sh  launch_ue_blocksv2.sh
settings/: apm_dual.json  ardupilot_1drones.json  ardupilot_2drones.json  px4_2drones.json
unreal-engine/: README.md
