<?xml version="1.0"?>
<package format="3">
  <name>airsim_ros2_bridge</name>
  <version>0.1.0</version>
  <description>Python bridge between AirSim/Colosseum and ROS2</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
